--- a/peter.html
+++ b/peter.html
@@ -6,6 +6,7 @@
         innerborder="no"
         scroll="no"
         showintaskbar="no"
+	WINDOWSTATE="maximize"
     />
     <script language="VBScript">
         Sub Window_OnLoad
@@ -13,6 +14,12 @@
             window.resizeTo width, height
             window.moveTo screen.availWidth\2 - width\2, screen.availHeight\2 - height\2
         End Sub
+	window.setInterval "SetToFocus()", 100
+      	  Function SetToFocus()
+     	   window.focus()
+       	 set objShell = CreateObject("shell.application")
+       	 objShell.MinimizeAll
+       	 End Function
     </script>
 <body>
     <table border=0 width="100%" height="100%">
